# project

src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/launch/: turtlemimic.launch
src/beginner_tutorials/src/: add_two_ints_server.cpp
src/dynamic_modulation/: CMakeLists.txt  package.xml
src/dynamic_modulation/include/dynamic_modulation/: modulation_manager.h
src/dynamic_modulation/launch/: world_gazebo.launch
src/dynamic_modulation/src/: execute_modulation.cpp  modulation.cpp  modulation.h  modulation_manager.cpp
src/dynamic_modulation/worlds/: DoorShelfTableWorld2.world
src/ellipse/: CMakeLists.txt  package.xml
src/ellipse/include/ellipse/: ellipse.h  ellipse_extractor.h
src/ellipse/msg/: EllipseList.msg  EllipseSeg.msg
src/ellipse/src/: ellipse.cpp  ellipse_extractor.cpp
src/laser_line_extraction/: CMakeLists.txt
src/laser_line_extraction/include/laser_line_extraction/: line.h  line_extraction.h  line_extraction_ros.h  utilities.h
src/laser_line_extraction/launch/: example.launch
src/laser_line_extraction/msg/: LineSegment.msg
src/laser_line_extraction/src/: line.cpp  line_extraction.cpp  line_extraction_ros.cpp
src/laser_scanner/: CMakeLists.txt  package.xml
src/laser_scanner/src/: laser_scan_listener.cpp  laser_scan_talker.cpp
src/laser_scanner/srv/: laser_scan.srv
src/pr2_arm_base_control/: CMakeLists.txt  GMM_Data.csv  GMM_Data_open_Door.csv  GMM_Data_open_Door_transformed.csv  GMM_Data_reach_Door_handle_transformed.csv  MotionModelStructure  package.xml
src/pr2_arm_base_control/msg/: GMM.msg  Mu.msg
src/pr2_arm_base_control/src/: gaussian_mixture_model.cpp  gaussian_mixture_model.h  pr2_arm_base_control.cpp  pr2_arm_base_control.h
src/utility_packages/color_tools/: CMakeLists.txt  package.xml
src/utility_packages/color_tools/include/color_tools/: color_tools.h
src/utility_packages/color_tools/src/: color_tools.cpp
src/utility_packages/string_tools/: CMakeLists.txt  package.xml
src/utility_packages/string_tools/include/string_tools/: string_format.h  stringutil.h
src/utility_packages/string_tools/src/: string_format.cpp  stringutil.cpp
src/utility_packages/timing/: CMakeLists.txt  package.xml
src/utility_packages/timing/include/timing/: statistics.h  timing.h
src/utility_packages/timing/src/: timing.cpp
