<?xml version="1.0"?>
<package>
  <name>color_tools</name>
  <version>0.0.0</version>
  <description>The color_tools package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <maintainer email="c.dornhege@gmail.com">Christian Dornhege</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- <url type="website">http://wiki.ros.org/color_tools</url> -->

  <author email="c.dornhege@gmail.com">Christian Dornhege</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
